--- a/index.html
+++ b/index.html
@@ -218,9 +218,11 @@
       <div class="hero-body">
         <div class="container">
           <div class="columns is-vcentered  is-centered">
-            <video id="teaser" autoplay muted loop height="100%">
-              <source src="media/Hopper_Env_1.gif" type="video/gif">
-            </video>
+            <img src="media/Hopper_Env_1.gif" alt="Hopper" />
+            <img src="media/Ant_Env_1.gif" alt="Ant" />
+            <img src="media/Anymal_Env_1.gif" alt="Anymal" />
+            <img src="media/HumanoidEnv_1.gif" alt="Humanoid" />
+            <img src="media/snu_humanoid_SHAC.gif" alt="SNU Humanoid" />
             </br>
           </div>
           <br>
