--- a/index.html
+++ b/index.html
@@ -220,9 +220,12 @@
           <div class="columns is-vcentered  is-centered">
             <img src="media/Hopper_Env_1.gif" alt="Hopper" />
             <img src="media/Ant_Env_1.gif" alt="Ant" />
+            <br>
             <img src="media/Anymal_Env_1.gif" alt="Anymal" />
             <img src="media/HumanoidEnv_1.gif" alt="Humanoid" />
+            <br>
             <img src="media/snu_humanoid_SHAC.gif" alt="SNU Humanoid" />
+            <img src="media/claw.gif" alt="Claw" />
             </br>
           </div>
           <br>
@@ -340,36 +343,7 @@
         </div>
   </section>
 
-  <video id="q-pred-video" muted autoplay loop width="100%">
-    <source src="media/results/qpred/tomato.mp4" type="video/mp4">
-  </video>
-
-  <br>
-  <br>
-  <section class="section">
-    <div class="container is-max-widescreen">
-
-      <div class="rows">
-        <h2 class="title is-3">Emergent Properties</h2>
-
-        <h3 class="title is-4">Tracking Objects</h3>
-        A selected example of tracking an unseen hand sanitizer instance with an agent that was trained on a single
-        object with 5 "press the handsan" demos. Since <span class="dperact">PerAct</span> focuses on actions, it
-        doesn't need a complete representation of the bottle, and only has to predict <b><i>where</i> to press</b> the
-        sanitizer.
-
-        <video id="tracking-objects" muted autoplay loop width="99%">
-          <source src="media/results/animations/handsan_tracking_v2.mp4" type="video/mp4">
-        </video>
-
-      </div>
-
-    </div>
-
-  </section>
-
-
-  <section class="section" id="BibTeX">
+  <!-- <section class="section" id="BibTeX">
     <div class="container is-max-widescreen content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{shridhar2022peract,
@@ -379,7 +353,7 @@
   year      = {2022},
 }</code></pre>
     </div>
-  </section>
+  </section> -->
 
 
   <footer class="footer">
