--- a/index.html
+++ b/index.html
@@ -219,13 +219,23 @@
         <div class="container">
           <div class="columns is-vcentered  is-centered">
             <p>
-              <img src="media/Hopper_Env_1.gif" alt="Hopper" />
-              <img src="media/Ant_Env_1.gif" alt="Ant" />
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/Hopper_Env_1_compressed.mp4" type="video/mp4">
+              </video>
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/AntEnv_1_compressed.mp4" type="video/mp4">
+              </video>
               <br>
-              <img src="media/Anymal_Env_1.gif" alt="Anymal" />
-              <img src="media/HumanoidEnv_1.gif" alt="Humanoid" />
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/AnymalEnv_1.gif" type="video/mp4">
+              </video>
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/HumanoidEnv_1_compressed.mp4" type="video/mp4">
+              </video>
               <br>
-              <img src="media/snu_humanoid_SHAC.gif" alt="SNU Humanoid" />
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/snu_humanoid_SHAC_compressed.mp4" type="video/mp4">
+              </video>
               <img src="media/claw.gif" alt="Claw" />
             </p>
           </div>
@@ -315,10 +325,9 @@
             <br>
 
             <div class="container">
-              <div class="columns is-vcentered  is-centered">
-                <img src="media/AntEnv_1_vs_PPO.gif" alt="Ant results" />
-                </br>
-              </div>
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/AntEnv_1_vs_PPO_compressed.mp4" type="video/mp4">
+              </video>
               <br>
               <h2 class="subtitle has-text-centered">
                 Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
