--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
               <video id="teaser" autoplay muted loop height="100%">
                 <source src="media/snu_humanoid_SHAC_compressed.mp4" type="video/mp4">
               </video>
-              <img src="media/claw.gif" alt="Claw" />
+              <video id="teaser" autoplay muted loop height="100%">
+                <source src="media/claw_compressed.mp4" type="video/mp4">
+              </video>
             </p>
           </div>
           <br>
