try better formatting

--- a/index.html
+++ b/index.html
@@ -219,26 +219,40 @@
         <div class="container">
           <div class="columns is-vcentered  is-centered">
             <p>
-              <video id="teaser" autoplay muted loop height="50%">
+            <div id="wrapper">
+              <video id="teaser" autoplay muted loop width="320">
                 <source src="media/Hopper_Env_1_compressed.mp4" type="video/mp4">
               </video>
-              <video id="teaser" autoplay muted loop height="50%">
+              <video id="teaser" autoplay muted loop width="320">
                 <source src="media/AntEnv_1_compressed.mp4" type="video/mp4">
               </video>
-              <br>
+              <div class="clear"></div>
+            </div>
+
+            <br>
+
+            <div id="wrapper">
               <video id="teaser" autoplay muted loop height="50%">
                 <source src="media/AnymalEnv_1.gif" type="video/mp4">
               </video>
               <video id="teaser" autoplay muted loop height="50%">
                 <source src="media/HumanoidEnv_1_compressed.mp4" type="video/mp4">
               </video>
-              <br>
+              <div class="clear"></div>
+            </div>
+
+            <br>
+
+            <div id="wrapper">
               <video id="teaser" autoplay muted loop height="50%">
                 <source src="media/snu_humanoid_SHAC_compressed.mp4" type="video/mp4">
               </video>
               <video id="teaser" autoplay muted loop height="50%">
                 <source src="media/claw_compressed.mp4" type="video/mp4">
               </video>
+              <div class="clear"></div>
+            </div>
+
             </p>
           </div>
           <br>
@@ -327,13 +341,13 @@
             <br>
 
             <div class="container">
-              <video id="teaser" autoplay muted loop height="100%">
+              <center <video id="teaser" autoplay muted loop height="100%">
                 <source src="media/AntEnv_1_vs_PPO_compressed.mp4" type="video/mp4">
-              </video>
-              <br>
-              <h2 class="subtitle has-text-centered">
-                Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
-              </h2>
+                </video>
+                <br>
+                <h2 class="subtitle has-text-centered">
+                  Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
+                </h2>
             </div>
 
             <br>
