another attempt at videos

--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
           <div class="columns is-vcentered  is-centered">
             <p>
             <div id="wrapper">
-              <video id="teaser" autoplay muted loop width="320">
+              <video id="teaser" autoplay muted loop width="50%">
                 <source src="media/Hopper_Env_1_compressed.mp4" type="video/mp4">
               </video>
-              <video id="teaser" autoplay muted loop width="320">
+              <video id="teaser" autoplay muted loop width="50%">
                 <source src="media/AntEnv_1_compressed.mp4" type="video/mp4">
               </video>
               <div class="clear"></div>
