--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
           <div class="columns is-vcentered  is-centered">
             <p>
             <div id="wrapper">
-              <video id="teaser" autoplay muted loop width="50%">
+              <video id="home1" autoplay muted loop width="50%">
                 <source src="media/Hopper_Env_1_compressed.mp4" type="video/mp4">
               </video>
-              <video id="teaser" autoplay muted loop width="50%">
+              <video id="home2" autoplay muted loop width="50%">
                 <source src="media/AntEnv_1_compressed.mp4" type="video/mp4">
               </video>
               <div class="clear"></div>
@@ -232,10 +232,10 @@
             <br>
 
             <div id="wrapper">
-              <video id="teaser" autoplay muted loop height="50%">
-                <source src="media/AnymalEnv_1.gif" type="video/mp4">
+              <video id="home1" autoplay muted loop height="50%">
+                <source src="media/AnymalEnv_1_compressed.mp4" type="video/mp4">
               </video>
-              <video id="teaser" autoplay muted loop height="50%">
+              <video id="home2" autoplay muted loop height="50%">
                 <source src="media/HumanoidEnv_1_compressed.mp4" type="video/mp4">
               </video>
               <div class="clear"></div>
@@ -244,10 +244,10 @@
             <br>
 
             <div id="wrapper">
-              <video id="teaser" autoplay muted loop height="50%">
+              <video id="home1" autoplay muted loop height="50%">
                 <source src="media/snu_humanoid_SHAC_compressed.mp4" type="video/mp4">
               </video>
-              <video id="teaser" autoplay muted loop height="50%">
+              <video id="home2" autoplay muted loop height="50%">
                 <source src="media/claw_compressed.mp4" type="video/mp4">
               </video>
               <div class="clear"></div>
@@ -341,13 +341,13 @@
             <br>
 
             <div class="container">
-              <center <video id="teaser" autoplay muted loop height="100%">
+              <video id="teaser" autoplay muted loop height="100%">
                 <source src="media/AntEnv_1_vs_PPO_compressed.mp4" type="video/mp4">
-                </video>
-                <br>
-                <h2 class="subtitle has-text-centered">
-                  Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
-                </h2>
+              </video>
+              <br>
+              <h2 class="subtitle has-text-centered">
+                Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
+              </h2>
             </div>
 
             <br>
