try another attempt

--- a/index.html
+++ b/index.html
@@ -218,19 +218,17 @@
       <div class="hero-body">
         <div class="container">
           <div class="columns is-vcentered  is-centered">
-            <p>
             <div id="wrapper">
-              <video id="home1" autoplay muted loop width="50%">
+              <video id="home1" autoplay muted loop width="100%">
                 <source src="media/Hopper_Env_1_compressed.mp4" type="video/mp4">
               </video>
-              <video id="home2" autoplay muted loop width="50%">
+              <video id="home2" autoplay muted loop width="100%">
                 <source src="media/AntEnv_1_compressed.mp4" type="video/mp4">
               </video>
-              <div class="clear"></div>
             </div>
+          </div>
 
-            <br>
-
+          <div class="columns is-vcentered  is-centered">
             <div id="wrapper">
               <video id="home1" autoplay muted loop height="50%">
                 <source src="media/AnymalEnv_1_compressed.mp4" type="video/mp4">
@@ -238,11 +236,10 @@
               <video id="home2" autoplay muted loop height="50%">
                 <source src="media/HumanoidEnv_1_compressed.mp4" type="video/mp4">
               </video>
-              <div class="clear"></div>
             </div>
+          </div>
 
-            <br>
-
+          <div class="columns is-vcentered  is-centered">
             <div id="wrapper">
               <video id="home1" autoplay muted loop height="50%">
                 <source src="media/snu_humanoid_SHAC_compressed.mp4" type="video/mp4">
@@ -250,19 +247,17 @@
               <video id="home2" autoplay muted loop height="50%">
                 <source src="media/claw_compressed.mp4" type="video/mp4">
               </video>
-              <div class="clear"></div>
             </div>
-
-            </p>
           </div>
-          <br>
-          <h2 class="subtitle has-text-centered">
-            Adaptive Horizon Actor Critic (AHAC) is a first-order model-based reinforcement learning algorithm <br>
-            that achieves up to 91% more asymptotic reward than model-free approaches while being 1000x more sample <br>
-            efficient and more scalable to high-dimensional tasks.
-          </h2>
         </div>
+        <br>
+        <h2 class="subtitle has-text-centered">
+          Adaptive Horizon Actor Critic (AHAC) is a first-order model-based reinforcement learning algorithm <br>
+          that achieves up to 91% more asymptotic reward than model-free approaches while being 1000x more sample <br>
+          efficient and more scalable to high-dimensional tasks.
+        </h2>
       </div>
+    </div>
     </div>
   </section>
 
