--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
             </div>
           </div>
 
+          <br>
+
           <div class="columns is-vcentered  is-centered">
             <div id="wrapper">
               <video id="home1" autoplay muted loop height="50%">
@@ -238,6 +240,8 @@
               </video>
             </div>
           </div>
+
+          <br>
 
           <div class="columns is-vcentered  is-centered">
             <div id="wrapper">
@@ -336,13 +340,15 @@
             <br>
 
             <div class="container">
-              <video id="teaser" autoplay muted loop height="100%">
-                <source src="media/AntEnv_1_vs_PPO_compressed.mp4" type="video/mp4">
-              </video>
-              <br>
-              <h2 class="subtitle has-text-centered">
-                Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
-              </h2>
+              <div class="columns is-vcentered  is-centered">
+                <video id="teaser" autoplay muted loop height="100%">
+                  <source src="media/AntEnv_1_vs_PPO_compressed.mp4" type="video/mp4">
+                </video>
+                <br>
+                <h2 class="subtitle has-text-centered">
+                  Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
+                </h2>
+              </div>
             </div>
 
             <br>
