--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
 
             <div class="container">
               <div class="columns is-vcentered  is-centered">
-                <video id="teaser" autoplay muted loop height="100%">
+                <video autoplay muted loop height="100%">
                   <source src="media/AntEnv_1_vs_PPO_compressed.mp4" type="video/mp4">
                 </video>
                 <br>
-                <h2 class="subtitle has-text-centered">
-                  Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
-                </h2>
               </div>
+              <h2 class="subtitle has-text-centered">
+                Qualitatively, AHAC achieves more optimal and natural looking behaviour than our main baseline, PPO.
+              </h2>
             </div>
 
             <br>
