--- a/index.html
+++ b/index.html
@@ -120,15 +120,17 @@
               Simulation</h1>
             <h3 class="title is-4 conference-authors"><a target="_blank" href="https://www.robot-learning.org/">TMLR
                 2023</a></h3>
-            <!-- <div class="is-size-5 publication-authors">
+            <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a target="_blank" href="https://mohitshridhar.com/">Mohit Shridhar</a><sup>1</sup>,</span>
-              <span class="author-block">
+                Authors hidden while paper is under review.
+                <!-- <span class="author-block">
+                <a target="_blank" href="https://mohitshridhar.com/">Mohit Shridhar</a><sup>1</sup>,</span> -->
+                <!-- <span class="author-block">
                 <a target="_blank" href="http://lucasmanuelli.com/">Lucas Manuelli</a><sup>2</sup>,</span>
               <span class="author-block">
                 <a target="_blank" href="https://homes.cs.washington.edu/~fox/">Dieter Fox</a><sup>1, 2</sup>
-              </span>
-            </div> -->
+              </span> -->
+            </div>
 
             <!-- <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>University of Washington,</span>
@@ -158,7 +160,7 @@
                 </span> -->
 
                 <!-- Video Link. -->
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a target="_blank" href="https://youtu.be/Pa7tNjtK9w0"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -166,7 +168,7 @@
                     </span>
                     <span>Video</span>
                   </a>
-                </span>
+                </span> -->
 
                 <!-- Talk Link.
                 <span class="link-block">
@@ -300,8 +302,8 @@
       <div class="column is-two-thirds">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/Pa7tNjtK9w0?rel=0&amp;showinfo=0" frameborder="0"
-            allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Pa7tNjtK9w0?autoplay=0&showinfo=0&controls=0" frameborder="0"
+            allow="encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
