try to remove video author

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
       <div class="column is-two-thirds">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/Pa7tNjtK9w0?autoplay=0&showinfo=0&controls=0" frameborder="0"
-            allow="encrypted-media" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Pa7tNjtK9w0?modestbranding=1&autohide=1&showinfo=0&controls=1"
+            frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
