another attempt at hiding video settings

--- a/index.html
+++ b/index.html
@@ -302,13 +302,20 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
         <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/Pa7tNjtK9w0?modestbranding=1&autohide=1&showinfo=0&controls=1"
-            frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
+        <div class="youtube-container">
+          <iframe
+            src="https://www.youtube.com/embed/Pa7tNjtK9w0?controls=1&modestbranding=1&playsinline=1&rel=0&enablejsapi=1&"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
+
       </div>
     </div>
   </section>
+
+  ≈
+
 
   <section class="section">
     <div class="container is-max-widescreen">
