another attempt at video

--- a/index.html
+++ b/index.html
@@ -306,16 +306,12 @@
           <iframe
             src="https://www.youtube.com/embed/Pa7tNjtK9w0?controls=1&modestbranding=1&playsinline=1&rel=0&enablejsapi=1&"
             title="YouTube video player" frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
-
       </div>
     </div>
   </section>
-
-  ≈
-
 
   <section class="section">
     <div class="container is-max-widescreen">
