--- a/index.html
+++ b/index.html
@@ -302,12 +302,9 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
         <h2 class="title is-3">Video</h2>
-        <div class="youtube-container">
-          <iframe
-            src="https://www.youtube.com/embed/Pa7tNjtK9w0?controls=1&modestbranding=1&playsinline=1&rel=0&enablejsapi=1&"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/Pa7tNjtK9w0?modestbranding=1&autohide=1&showinfo=0&controls=1"
+            frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
