Small formatting changes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Learning Optimal Policies Through Contact <br> in Differentiable
+            <h1 class="title is-1 publication-title">Learning Optimal Policies Through Contact in Differentiable
               Simulation</h1>
             <h3 class="title is-4 conference-authors"><a target="_blank" href="https://www.robot-learning.org/">TMLR
                 2023</a></h3>
@@ -364,9 +364,10 @@
               </div>
               <br>
               <h2 class="subtitle has-text-centered">
-                We also run experiments on classic tasks such as hopper. Real robots such as Anymal. The popular
+                We also run experiments on classic tasks such as Hopper. Real robots such as Anymal. The popular
                 Humanoid task with 21 degrees of freedom and an alternative muscle-actuated version with 152 degrees of
-                freedom. We find that AHAC maintains its asymptotic performance across the board. It also exhibits great
+                freedom which we call SNU Humanoid. We find that AHAC maintains its asymptotic performance across the
+                board. It also exhibits great
                 sample efficiency, requiring 3 order of magnitude less data samples than PPO. Most impressively it also
                 scales significantly better on high dimensional tasks. On the muscle-actuated humanoid, it
                 achieves nearly twice the reward of PPO for the same training time.
